# node-exporter-textfile-collector-scripts

./: .flake8  .gitignore  CONTRIBUTING.md  MAINTAINERS.md  README.md  apt.sh  apt_info.py  areca_cli.py  borgmatic_metrics.py  btrfs_stats.py  chrony.py  chrony.sh  cronjob_status  deleted_libraries.py  directory-size.sh  dmidecode.py  dmslave_info.py  freebsd-rc-service.sh  fstab-check.sh  hddtemp.sh  hpssacli.pl  hpssacli.sh  inotify-instances  inotify_instances.py  instant_per_process_cpu_mem_usage.sh  ipmitool  ipmitool_chassis.sh  ipmitool_dcmi  ipset-textfile-exporter  ipsets  iptables.py  iscsi_names.sh  lvm  lvm-prom-collector  mailq.sh  md_info.sh  md_info_detail.sh  mellanox_hca_temp  multipathd_info  multipathd_metrics.sh  (+29 more)
.circleci/: config.yml
.github/workflows/: lint.yml
mock/: ntpq  storcli  zfs
mock/fixtures/: ntpq_-c_rv_0_offset,sys_jitter,rootdisp,rootdelay  ntpq_-np  storcli_-cALL-eALL-sALL_show_all.json  storcli_-cALL_show_all.json  zfs_list_-p_-H_-t_snapshot_-o_name,used,creation
nvme/: nvme_metrics_dashboard.json  nvme_metrics_parallel.sh
tests/: test_inotify_instances.py  zfs_zpool_test.py
tests/fixtures/: zpool_status_-p  zpool_status_-p_degraded_sparse  zpool_status_-p_logs  zpool_status_-p_resilvered  zpool_status_-p_scrub  zpool_status_-p_unavail
tests/inotify_instances/: test__get_processes.yml  test__pids.yml  test_generate_process_metrics.yml  test_generate_process_metrics_command.yml  test_generate_process_metrics_no_user.yml  test_generate_process_metrics_user.yml  test_generate_user_metrics.yml  (+2 more)
(+17 files in other folders)
